test/sema/typeck/lambda/variadic-tuple-type.out
error: variadic parameter is not allowed in tuple types.
--> variadic-tuple-type.dora:1:20
 | fn f(_value: (Int32...)) {}
                      ~~~
 | 
1 error found.
