test/sema/typeck/lambda/variadic-tuple-type.dora
fn f(_value: (Int32...)) {}
